--- a/index.html
+++ b/index.html
@@ -624,11 +624,11 @@
             <input type="number" id="weightRevenue" value="30" min="0" max="100" style="width: 60px;">%
           </div>
           <div>
-            <label>Probability of Risk:</label>
+            <label>Impact on Profit:</label>
             <input type="number" id="weightProbability" value="40" min="0" max="100" style="width: 60px;">%
           </div>
           <div>
-            <label>Public Image:</label>
+            <label>Impact on Public Image:</label>
             <input type="number" id="weightImage" value="30" min="0" max="100" style="width: 60px;">%
           </div>
         </div>
