--- a/index.html
+++ b/index.html
@@ -644,13 +644,13 @@
               </span>
             </th>
             <th>
-              Probability of Risk
+              Impact on Profit
               <span class="tooltip"><i class="icon">?</i>
                 <span class="tooltip-text">Rate 1-5: 1 = Very unlikely, 5 = Very likely</span>
               </span>
             </th>
             <th>
-              Public Image
+              Impact on Public Image
               <span class="tooltip"><i class="icon">?</i>
                 <span class="tooltip-text">Rate 1-5: 1 = Minimal impact, 5 = Severe impact</span>
               </span>
